--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,8 +5,8 @@
 
     <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
     <uses-permission android:name="android.permission.BLUETOOTH_SCAN" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -18,6 +18,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SelectionApp"
         tools:targetApi="31">
+
         <activity
             android:name=".PermissionActivity"
             android:exported="true">
@@ -29,6 +30,12 @@
         </activity>
         <activity
             android:name=".MainActivity"
+            android:exported="false" />
+        <service
+            android:name=".BrainWave"
+            android:enabled="true" />
+        <activity
+            android:name=".OptionActivity"
             android:exported="false" />
 
     </application>
