--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,9 +31,11 @@
         <activity
             android:name=".MainActivity"
             android:exported="false" />
+
         <service
             android:name=".BrainWave"
-            android:enabled="true" />
+            android:enabled="true"
+            android:exported="false" />
         <activity
             android:name=".OptionActivity"
             android:exported="false" />
